# cpipe

./: BENCH-Linux.md  BENCH-Windows.md  CMakeLists.txt  README.md
include/: bits.h  buffer.h  types.h
include/compat-atomic/: stdatomic.h
tests/: common.h  test_001.c  test_002.c  test_003.c  test_004.c  test_005.c
